[Page] Fix additionalMetadata spacing

--- a/polaris-react/src/components/Page/components/Header/Header.scss
+++ b/polaris-react/src/components/Page/components/Header/Header.scss
@@ -105,6 +105,10 @@ $action-menu-rollup-computed-width: 40px;
     margin-left: calc(
       var(--p-space-5) * 2 + var(--p-space-2) + var(--p-space-1)
     );
+
+    #{$se23} & {
+      margin-left: calc(var(--p-space-5) + var(--p-space-2) + var(--p-space-1));
+    }
   }
 
   .noBreadcrumbs & {
